promo section added

--- a/app/(client)/globals.css
+++ b/app/(client)/globals.css
@@ -200,3 +200,7 @@ button:active {
   background-color: transparent;
   box-shadow: none;
 } */
+
+.carousel-container:hover .carousel-track {
+  animation-play-state: paused;
+}
